--- a/EmployeeManagement/Views/Home/Create.cshtml
+++ b/EmployeeManagement/Views/Home/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create Employee";
 }
 
-<form enctype="multipart/form-data" asp-controller="home" asp-action="create"
+<form enctype="multipart/form-data" asp-controller="Home" asp-action="Create"
       method="post" class="mt-3">
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
@@ -52,7 +52,9 @@
 
 
     @section Scripts {
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
         <script>
             $(document).ready(function () {
                 $('.custom-file-input').on("change", function () {
